# bank_widget

./: README.md  main.py  pyproject.toml
src/: main.py  processing.py  widget.py
src/masks/: masks.py
tests/: test_dict.py
