[tool.poetry]
name = "bank-vidget"
version = "0.1.0"
description = ""
authors = ["AlexeyVedenkin <alexey.vedenkin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"

[flake8]
max-line-length = 119
# ignore = E203, W503
# exclude = .git, __pycache__, venv, .venv

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
# максимальная длина строки 119
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
 /(
    \.git
 )/
)
'''

[tool.isort]
# максимальная длина строки 119
line_length = 119


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
